[gd_scene load_steps=3 format=3 uid="uid://bjwwbrv1arlc2"]

[ext_resource type="StyleBox" uid="uid://7s1ibh2sjqkm" path="res://modules/panels/default_timeline_panel/clip_button/clip_button.tres" id="1_cknt8"]
[ext_resource type="Script" path="res://modules/panels/default_timeline_panel/clip_button/clip_button.gd" id="2_ynmfg"]

[node name="ClipButton" type="Button"]
offset_right = 184.0
offset_bottom = 86.0
mouse_filter = 1
theme_override_styles/focus = ExtResource("1_cknt8")
theme_override_styles/hover = ExtResource("1_cknt8")
theme_override_styles/pressed = ExtResource("1_cknt8")
theme_override_styles/normal = ExtResource("1_cknt8")
script = ExtResource("2_ynmfg")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4

[node name="Label" type="Label" parent="Margin"]
layout_mode = 2
size_flags_vertical = 1
clip_text = true

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="renamed" from="." to="." method="_on_renamed"]
